# demo

./: LICENSE  meson.build
cairo/: demo1.c  demo10.c  demo11.c  demo12.c  demo4.c  meson.build
command/: find_source.sh  get_file_name.sh
dbus/: gdbus_service1.c  meson.build
dbus/dbus_recv_send/: send.c
gio/: gio-channel-pip.c  gio-channel.c  gio-copy.c  gio-file-attr-time.c  gio-file-info.c  gio-file-read-write.c  gio-file2.c  gio-rm.c  meson.build
glib/: meson.build
gobject/: meson.build
gobject/demo5/: my-iusb.h
gsettings/: demo1.c  demo2.c  meson.build
gtk/: meson.build
pam/: meson.build  pam_module_conversation.c  pam_module_conversation1.c  pam_test_conversation.c
